[package]
name = "xdeploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
